--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
                             </tr>
                             <tr class="ours">
                               <td class="left first"><strong>MATRIX (Ours)</strong> <span class="muted"></span></td>
-                              <td class="first"><strong>0.546</strong></td><td><strong>0.641</strong></td><td><strong>0.593</strong></td>
-                              <td><strong>0.954</strong></td><td><strong>0.994</strong></td><td><strong>69.73</strong></td>
+                              <td class="first"><strong>0.546</strong></td><td class="first"><strong>0.641</strong></td><td class="first"><strong>0.593</strong></td>
+                              <td class="first"><strong>0.954</strong></td><td><strong>0.994</strong></td><td><strong>69.73</strong></td>
                             </tr>
                           </tbody>
                         </table>
@@ -404,31 +404,31 @@
                             <td class="roman sep">(III)</td>
                             <td class="left">(I) + LoRA w/o layer selection</td>
                             <td>0.445</td><td>0.526</td><td>0.486</td>
-                            <td>0.940</td><td>0.994</td><td>69.77</td>
+                            <td>0.940</td><td>0.994</td><td class="second">69.77</td>
                             </tr>
                             <tr>
                             <td class="roman sep">(IV)</td>
                             <td class="left">(I) + LoRA w/ layer selection</td>
-                            <td>0.490</td><td>0.594</td><td>0.542</td>
+                            <td>0.490</td><td class="second">0.594</td><td>0.542</td>
                             <td>0.950</td><td>0.994</td><td>68.97</td>
                             </tr>
                             <tr>
                             <td class="roman sep">(V)</td>
                             <td class="left">(IV) + SPA loss</td>
                             <td>0.451</td><td>0.540</td><td>0.496</td>
-                            <td>0.937</td><td>0.995</td><td>70.26</td>
+                            <td>0.937</td><td class="first">0.995</td><td class="first">70.26</td>
                             </tr>
                             <tr>
                             <td class="roman sep">(VI)</td>
                             <td class="left">(IV) + SGA loss</td>
-                            <td>0.509</td><td>0.592</td><td>0.550</td>
-                            <td>0.952</td><td>0.994</td><td>69.62</td>
+                            <td class="second">0.509</td><td>0.592</td><td class="second">0.550</td>
+                            <td class="second">0.952</td><td>0.994</td><td>69.62</td>
                             </tr>
                             <tr class="ours thick-top thick-bottom">
                             <td class="roman sep">(VII)</td>
                             <td class="left"> <strong>(IV) + SPA loss + SGA loss (Ours)</strong></td>
-                            <td class="first">0.546</td><td>0.641</td><td>0.593</td>
-                            <td>0.954</td><td>0.994</td><td>69.73</td>
+                            <td class="first"><strong>0.546</strong></td><td class="first"><strong>0.641</strong></td><td class="first"><strong>0.593</strong></td>
+                            <td class="first"><strong>0.954</strong></td><td class="second"><strong>0.994</strong></td><td><strong>69.73</strong></td>
                             </tr>
                         </tbody>
                         </table>
