--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
         <div class="container">
             <div class="title-row">
                 <div class="title-flex">
-                    <div class="title-image">
-                        <source src="images/matrix.png" type="image">
-                    </div>
+                    <video class="title-video" autoplay muted loop playsinline>
+                        <source src="images/moving_matrix2.mp4" type="video/mp4">
+                    </video>
+                   
                     <div class="title-text-block">
                         <h1 class="title"><span class="gradient-text">MATRIX</span>: Mask Track Alignment<span class="title-break"></span> for Interaction-Aware Video Generation</h1>
                         <h1 class="subtitle">arXiv 2025</h1>
