--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <!-- Author Information -->
             <div class="base-row author-row">
                 <div class="base-col author-col">
-                    <a href= "https://JinSY515.github.io/" target ="_blank" class="author-text">
+                    <a href= "https://JinSY515.github.io/my-page" target ="_blank" class="author-text">
                         Siyoon Jin
                     </a>
                 </div>
@@ -243,7 +243,7 @@
                                 data-fullsrc="images/dataset_example.png">
                     
                             <figcaption>
-                                <strong>Dataset Example.</strong> Given a video and a caption, we extract interaction information including subject, verb, object, its appearance description and interaction-related scores (Contactness, Dynamism). Using the extract information, we extract instance mask tracks using SAM2 and VLM.
+                                <strong>Dataset Example.</strong> Given a video and a caption, we extract interaction information including subject, verb, object, its appearance description and interaction-related scores. Using the information, we extract instance mask tracks using SAM2 and VLM.
                             </figcaption>
                         </figure>
                         <figure class="slide">
@@ -252,7 +252,7 @@
                                     data-fullsrc="images/dataset_example2.png">
                     
                             <figcaption>
-                                <strong>Dataset Example.</strong> Given a video and a caption, we extract interaction information including subject, verb, object, its appearance description and interaction-related scores (Contactness, Dynamism). Using the extract information, we extract instance mask tracks using SAM2 and VLM.
+                                <strong>Dataset Example.</strong> Given a video and a caption, we extract interaction information including subject, verb, object, its appearance description and interaction-related scores. Using the information, we extract instance mask tracks using SAM2 and VLM.
                             </figcaption>
                         </figure>
                         <figure class="slide">
