--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </a>
                 </div>
                 <div class="base-col author-col">
-                    <a href="" target="_blank" class="author-text">
+                    <a href="nam-jisu.github.io" target="_blank" class="author-text">
                         Jisu Nam
                     </a>
                 </div>
@@ -177,7 +177,7 @@
         <div class="container">
             <!-- Contents: TL;DR -->
             <div class="tldr">
-                <b>TL;DR</b>: MATRIX reveals how video diffusion transformers (DiTs) represent multi-instance or subject-object interactions during video generation. Building on this, our MATRIX framework introduces a simple yet effective regularization that aligns the attention of key interaction-dominant layers with multi-instance mask tracks to enhance the interaction-awareness of video DiTs during video generation.
+                <b>TL;DR</b>: MATRIX identifies interaction-dominant layers in video DiTs and introduces a simple yet effective regularization that aligns their attention to multi-instance mask tracks, resulting in more interaction-aware video generation.
             </div>
             <!-- Contents: Overview -->
             <div id="overview" class="base-row section">
@@ -187,13 +187,9 @@
                     Recent video diffusion models can generate high-quality videos but often fail to correctly represent multi-object interactions — e.g., losing track of who does what to whom or drifting identities over time. MATRIX tackles this by first analyzing how DiTs internally bind text and video tokens, revealing that semantic grounding and temporal propagation of interactions emerge only in a few critical attention layers. 
                     It then fine-tunes just those layers using SGA + SPA losses aligned with multi-instance mask tracks, enabling efficient improvement without retraining the whole model. To support both analysis and fair benchmarking, the authors release MATRIX-11K, a large dataset of interaction-rich videos, and InterGenEval, a new protocol to measure interaction fidelity beyond standard quality metrics.
                     -->
-                    Video DiTs have advanced video generation, yet they still struggle to model multi-instance or subject-object interactions. This raises a key question: <strong>How do these models internally represent interactions?</strong> 
-                    To answer this, we curate MATRIX-11K, a video dataset with interaction-aware captions and multi-instance mask tracks. 
-                    Using this dataset, we conduct a systematic analysis that formalizes two perspectives of video DiTs: <strong>semantic grounding</strong>, via video-to-text attention, which evaluates whether noun and verb tokens capture instances and their relations; 
-                    and <strong>semantic propagation</strong>, via video-to-video attention, which assesses whether instance bindings persist across frames. 
-                    We find both effects concentrate in a small subset of interaction-dominant layers. Motivated by this, we introduce <strong>MATRIX</strong>, a simple and effective regularization that aligns attention in specific layers of video DiTs with multi-instance mask tracks from the MATRIX-11K dataset, enhancing both grounding and propagation. 
-                    We further propose <strong>InterGenEval</strong>, an evaluation protocol for interaction-aware video generation. 
-                    In experiments, MATRIX improves both interaction fidelity and semantic alignment while reducing drift and hallucination. Extensive ablations validate our design choices. 
+                    We conduct a systematic analysis that formalizes interaction as two perspectives of video DiTs: <strong>semantic grounding</strong> and <strong>semantic propagation</strong>.
+                    We find both effects concentrate in a small subset of interaction-dominant layers. 
+                    Motivated by this, we introduce <strong>MATRIX</strong>, a simple and effective regularization that aligns attention in specific layers of video DiTs with multi-instance mask tracks, enhancing interaction fidelity and semantic alignment while reducing drift and hallucination. 
                 </p>
             </div>
             <div class="image-container">
@@ -288,7 +284,7 @@
                 </div>
                 <p><strong>Influential Layer Candidates:</strong> We identify <strong>influential layers</strong> by rank-summing each layer's frequency in the AAS top-10 and its mean AAS, revealing that high alignment consistently concentrates in a small subset of layers.</p>
                 <p><strong>Dominant Layer Selection:</strong> Among the influential layers, we identify the <strong>interaction-dominant layers</strong> that most directly governs the outcomes, where the success gap is large and positive while the failure gap is large and negative relative to the overall mean.</p>
-                <p><strong>Relevance to Interaction-Awareness in Generated Videos.:</strong> When attention map in the interaction-dominant layers concentrates on the corresponding subject/object/union regions, generations are correct and preferred by human raters; when attention is diffused or mislocalized, failrues are common.</p>
+                <p><strong>Relevance to Interaction-Awareness in Generated Videos:</strong> When attention map in the interaction-dominant layers concentrates on the corresponding subject/object/union regions, generations are correct and preferred by human raters; when attention is diffused or mislocalized, failrues are common.</p>
             </section>
             <!-- Contents: Framework -->
             <section id="framework" class="section">
@@ -299,7 +295,7 @@
                     <div class="image-content">
                         <img src="images/fig_framework.png" class="img large-image" alt="MATRIX Framework illustration">
                     </div>
-                    <p class="image-caption">SGA and SPA supervise video-to-text and video-to-video attention directly with ground-truth instance mask tracks. We apply these losses only to the interaction-dominant layer, routing alignment where it is most effective, while leaving the remaining layers to preserve general video quality.</p> 
+                    <p class="image-caption">SGA and SPA supervise video-to-text and video-to-video attention directly with ground-truth instance mask tracks. We apply these losses only to the interaction-dominant layer, routing alignment where it is most effective, while leaving the remaining layers to preserve video quality.</p> 
                 </div>
                 
             </section>
@@ -308,8 +304,7 @@
                 <h2>InterGenEval</h2>
                 <div class="image-container">
                     <img src="images/InterGenEval.png" class="img large-image" alt="InterGenEval Illustration">
-                    <p class="image-caption"><strong>InterGenEval Protocol Pipeline</strong></p>
-
+                    <p class="image-caption"><strong>InterGenEval Protocol Pipeline</strong></p>               
                 </div>
             </section>
 
@@ -454,12 +449,12 @@
                     </div>            
             </section>
             <!-- Contents: Conclusion -->
-            <section id="conclusion" class="section">
+            <!-- <section id="conclusion" class="section">
                 <h2>Conclusion</h2>
 
                 <p>In this work, we propose MATRIX, a simple yet effective regularization terms that align the attention maps of 3D full attention in the interaction-dominant layers with ground truth instance mask tracks of subject/object/verb regions. 
                     Our approach significantly improves interaction fidelity, strengthens noun/verb grounding, and reduces identity drift and duplication without degrading overall video quality. Ablations further highlight the critical role of layer selection and the complementary contributions of SGA and SPA.</p>
-            </section>
+            </section> -->
             <!-- Contents: Citation -->
             <div class="citation add-top-padding">
                 <h1 id="citation">Citation</h1>
