--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </a>
                 </div>
                 <div class="base-col author-col">
-                    <a href="nam-jisu.github.io" target="_blank" class="author-text">
+                    <a href="https://nam-jisu.github.io" target="_blank" class="author-text">
                         Jisu Nam
                     </a>
                 </div>
