--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </a>
                 </div>
                 <div class="base-col author-col">
-                    <a href="" target="_blank" class="author-text">
+                    <a href="https://scholar.google.com/citations?user=DqG-ybIAAAAJ&hl=ko" target="_blank" class="author-text">
                         Jiyoung Kim
                     </a>
                 </div>
@@ -177,10 +177,23 @@
 
     <main class="main-content">
         <div class="container">
+            
             <!-- Contents: TL;DR -->
             <div class="tldr">
                 <b>TL;DR</b>: MATRIX identifies interaction-dominant layers in video DiTs and introduces a simple yet effective regularization that aligns their attention to multi-instance mask tracks, resulting in more interaction-aware video generation.
             </div>
+            <section id="results" class="section">
+                <h2>Results</h2>
+                <h3>Qualitative Comparisons</h3>
+                <div class="slideshow-container">
+                    <div class="slideshow" data-range="000-011" data-dir="videos" data-ext="mp4"></div>
+                    <button class="slideshow-nav prev" aria-label="Previous slide" title="Previous">&#10094;</button>
+                    <button class="slideshow-nav next" aria-label="Next slide" title="Next">&#10095;</button>
+                    <button class="play-pause" aria-label="Pause autoplay" title="Pause autoplay">
+                        <i class="fa fa-pause"></i>
+                      </button>
+                </div>
+            </section>
             <!-- Contents: Overview -->
             <div id="overview" class="base-row section">
                 <h2>Overview</h2>
@@ -311,7 +324,7 @@
             </section>
 
             <section id="results" class="section">
-                <h2>Results</h2>
+                <!-- <h2>Results</h2>
                 <h3>Qualitative Comparisons</h3>
                 <div class="slideshow-container">
                     <div class="slideshow" data-range="000-011" data-dir="videos" data-ext="mp4"></div>
@@ -320,8 +333,8 @@
                     <button class="play-pause" aria-label="Pause autoplay" title="Pause autoplay">
                         <i class="fa fa-pause"></i>
                       </button>
-                </div>
-
+                </div> -->
+                <h2>Results</h2>
                 <h3>Quantitative Comparisons</h3>     
                 <div class="table-container">
                     <div class="table-wrap">
