--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
                 <b>TL;DR</b>: MATRIX identifies interaction-dominant layers in video DiTs and introduces a simple yet effective regularization that aligns their attention to multi-instance mask tracks, resulting in more interaction-aware video generation.
             </div>
             <section id="results" class="section">
-                <h2>Results</h2>
-                <h3>Qualitative Comparisons</h3>
+                <h2>Teaser</h2>
                 <div class="slideshow-container">
                     <div class="slideshow" data-range="000-011" data-dir="videos" data-ext="mp4"></div>
                     <button class="slideshow-nav prev" aria-label="Previous slide" title="Previous">&#10094;</button>
