--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             
             <!-- Contents: TL;DR -->
             
-            <section id="results" class="section">
+            <section id="teaser" class="section">
                 <div class="tldr">
                     <b>TL;DR</b>: MATRIX identifies interaction-dominant layers in video DiTs and introduces a simple yet effective regularization that aligns their attention to multi-instance mask tracks, resulting in more interaction-aware video generation.
                 </div>
