--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <li><a href="#analysis">Analysis</a></li>
                     <li><a href="#framework">Framework</a></li>
                     <li><a href="#evaluation">Evaluation</a></li>
-                    <li><a href="#results">Results</a></li>
+                    <li><a href="#quan">Results</a></li>
                     <li><a href="#citation">Citation</a></li>
                 </ul>
             </nav>
@@ -180,7 +180,7 @@
             
             <!-- Contents: TL;DR -->
             
-            <section id="teaser" class="section">
+            <section id="results" class="section">
                 <div class="tldr">
                     <b>TL;DR</b>: MATRIX identifies interaction-dominant layers in video DiTs and introduces a simple yet effective regularization that aligns their attention to multi-instance mask tracks, resulting in more interaction-aware video generation.
                 </div>
@@ -325,7 +325,7 @@
                 </div>
             </section>
 
-            <section id="results" class="section">
+            <section id="quan" class="section">
                 <!-- <h2>Results</h2>
                 <h3>Qualitative Comparisons</h3>
                 <div class="slideshow-container">
