--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <b>TL;DR</b>: MATRIX identifies interaction-dominant layers in video DiTs and introduces a simple yet effective regularization that aligns their attention to multi-instance mask tracks, resulting in more interaction-aware video generation.
                 </div>
                 <h2>Teaser</h2>
-                <div class="image-container">
+                <div class="video-container">
                     <video class="results_video" autoplay muted loop playsinline>
                         <source src="videos/teaser_000.mp4" type="video/mp4">
                     </video>
