--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
             <!-- Links -->
             <div class="link-labels base-row"> 
-                <div class="base-col icon-col"><a href="" target="_blank"
+                <div class="base-col icon-col"><a href="https://arxiv.org/pdf/2510.07310" target="_blank"
                         class="link-block">
                         <i class="fa fas fa-file-text main-icon" style="font-size: 60px"></i>
                         <strong class="link-labels-text">Paper</strong>
@@ -494,7 +494,15 @@
                 <h1 id="citation">Citation</h1>
                 <p> If you use this work or find it helpful, please consider citing: </p>
                 <pre id="codecell0">
-
+@misc{jin2025matrixmasktrackalignment,
+title={MATRIX: Mask Track Alignment for Interaction-aware Video Generation}, 
+author={Siyoon Jin and Seongchan Kim and Dahyun Chung and Jaeho Lee and Hyunwook Choi and Jisu Nam and Jiyoung Kim and Seungryong Kim},
+year={2025},
+eprint={2510.07310},
+archivePrefix={arXiv},
+primaryClass={cs.CV},
+url={https://arxiv.org/abs/2510.07310}, 
+}
                 </pre>
             </div>
         </div>
