--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </a>
                 </div>
                 <div class="base-col author-col">
-                    <a href="" target="_blank" class="author-text">
+                    <a href="https://deep-overflow.github.io/" target="_blank" class="author-text">
                         Seongchan Kim
                     </a>
                 </div>
